--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "typescript": "^3.3.3333",
+    "utility-types": "^3.4.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
