--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/xml2js": "^0.4.3",
-    "ts-node-dev": "^1.0.0-pre.32"
+    "ts-node-dev": "^1.0.0-pre.32",
+    "tslint": "^5.13.1"
   }
 }
