--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "pug": "^2.0.3",
     "typescript": "^3.3.3333",
     "utility-types": "^3.4.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/pug": "^2.0.4",
     "@types/xml2js": "^0.4.3",
     "ts-node-dev": "^1.0.0-pre.32",
-    "tslint": "^5.13.1"
+    "tslint": "^5.13.1",
+    "tslint-config-prettier": "^1.18.0"
   }
 }
