--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start": "tsc && node ./build/index.js"
   },
   "dependencies": {
-    "@types/express-graphql": "^0.6.2",
     "@types/graphql": "^14.0.7",
+    "apollo-server": "^2.4.8",
+    "apollo-server-express": "^2.4.8",
     "axios": "^0.18.0",
     "express": "^4.16.4",
-    "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
     "pug": "^2.0.3",
     "typescript": "^3.3.3333",
