--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "start": "tsc && node ./build/index.js"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.11",
     "apollo-server": "^2.12.0",
     "apollo-server-express": "^2.12.0",
     "axios": "^0.19.2",
+    "csso": "^4.0.3",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.1.0",
     "typescript": "^3.8.3",
     "utility-types": "^3.10.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@types/csso": "^3.5.1",
     "@types/express": "^4.17.6",
     "@types/pug": "^2.0.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/styled-components": "^5.1.0",
     "@types/xml2js": "^0.4.5",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.1",
