--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/pug": "^2.0.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "@types/styled-components": "^5.1.0",
+    "@types/styled-components": "4.1.8",
     "@types/xml2js": "^0.4.5",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.1",
