--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.0",
+    "typeface-roboto": "^0.0.75",
     "typescript": "^3.8.3",
     "utility-types": "^3.10.0",
     "xml2js": "^0.4.23"
