--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csso": "^4.0.3",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
+    "helmet": "^3.22.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/csso": "^3.5.1",
     "@types/express": "^4.17.6",
+    "@types/helmet": "^0.0.45",
     "@types/pug": "^2.0.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
