--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "helmet": "^3.22.0",
+    "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.0",
@@ -29,6 +30,7 @@
     "@types/csso": "^3.5.1",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.45",
+    "@types/morgan": "^1.9.0",
     "@types/pug": "^2.0.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
