--- a/static/manifest.json
+++ b/static/manifest.json
@@ -6,8 +6,13 @@
   "theme_color": "#8bc34a",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/favicon-256.png",
       "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
