Added start_url to manifest.

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,6 +4,7 @@
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#8bc34a",
+  "start_url": "/",
   "icons": [
     {
       "src": "/favicon-256.png",
