--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-server": "^2.16.1",
     "apollo-server-express": "^2.16.1",
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
     "csso": "^4.0.3",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
