--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
     "@types/csso": "^3.5.1",
     "@types/express": "^4.17.7",
     "@types/helmet": "^0.0.48",
