--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.12.2",
     "axios": "^0.21.1",
     "compression": "^1.7.4",
-    "csso": "^4.0.3",
+    "csso": "^4.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "morgan": "^1.10.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^5.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
     "typeface-roboto": "^0.0.75",
-    "typescript": "^4.0.2",
+    "typescript": "^4.3.5",
     "utility-types": "^3.10.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.0",
-    "@types/csso": "^3.5.1",
-    "@types/express": "^4.17.7",
+    "@types/compression": "^1.7.1",
+    "@types/csso": "^4.2.0",
+    "@types/express": "^4.17.13",
     "@types/helmet": "^0.0.48",
-    "@types/morgan": "^1.9.1",
-    "@types/pug": "^2.0.4",
-    "@types/react": "^16.9.48",
-    "@types/react-dom": "^16.9.8",
-    "@types/styled-components": "^5.1.9",
-    "@types/xml2js": "^0.4.5",
-    "copyfiles": "^2.3.0",
-    "ts-node-dev": "^1.0.0-pre.61",
+    "@types/morgan": "^1.9.3",
+    "@types/pug": "^2.0.5",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.11",
+    "@types/xml2js": "^0.4.9",
+    "copyfiles": "^2.4.1",
+    "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "workbox-cli": "^5.1.3"
+    "workbox-cli": "^6.1.5"
   }
 }
