--- a/package.json
+++ b/package.json
@@ -13,30 +13,27 @@
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.1",
     "axios": "^0.21.1",
     "compression": "^1.7.4",
-    "csso": "^4.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "styled-components": "^5.3.5",
     "typeface-roboto": "^1.1.13",
-    "typescript": "^4.3.5",
+    "typescript": "^4.7.2",
     "utility-types": "^3.10.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/compression": "^1.7.1",
-    "@types/csso": "^4.2.0",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "@types/pug": "^2.0.5",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "@types/styled-components": "^5.1.25",
     "@types/xml2js": "^0.4.9",
     "copyfiles": "^2.4.1",
     "ts-node-dev": "^1.1.8",
