--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-or-later",
   "private": false,
   "engines": {
-    "node": ">=16",
+    "node": ">=18",
     "yarn": "1"
   },
   "scripts": {
@@ -20,7 +20,6 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.8.1",
-    "axios": "^0.27.2",
     "compression": "^1.7.4",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
@@ -30,7 +29,8 @@
     "typeface-roboto": "^1.1.13",
     "typescript": "^4.8.3",
     "utility-types": "^3.10.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
