--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "^4.8.3",
     "utility-types": "^3.10.0",
     "xml2js": "^0.4.23",
-    "yup": "^0.32.11"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
