--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "prebuild": "rimraf ./build",
-    "build": "tsc && copyfiles --up 3 node_modules/typeface-roboto/files/roboto-latin-{400,500,700}.woff2 static/fonts",
+    "build": "tsc",
     "postbuild": "workbox generateSW workbox-config.js",
     "watch": "ts-node-dev --respawn -T ./src/index.ts",
     "start": "tsc && node ./build/index.js",
@@ -26,7 +26,6 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typeface-roboto": "^1.1.13",
     "typescript": "^4.8.3",
     "utility-types": "^3.10.0",
     "xml2js": "^0.4.23",
