--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "prebuild": "rimraf ./build",
     "build": "tsc",
     "postbuild": "workbox generateSW workbox-config.js",
-    "watch": "ts-node-dev --respawn -T ./src/index.ts",
+    "watch": "tsx watch ./src/index.ts",
     "start": "tsc && node ./build/index.js",
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
     "compression": "^1.7.4",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.8.3",
+    "tsx": "^3.12.6",
+    "typescript": "^5.0.4",
     "utility-types": "^3.10.0",
     "xml2js": "^0.5.0",
-    "zod": "^3.19.1"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.14",
-    "@types/morgan": "^1.9.3",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
     "@types/xml2js": "^0.4.11",
-    "ts-node-dev": "^2.0.0",
     "tslint-config-prettier": "^1.18.0",
     "workbox-cli": "^6.5.4"
   }
