--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@types/xml2js": "^0.4.11",
+    "rimraf": "^5.0.0",
     "tslint-config-prettier": "^1.18.0",
     "workbox-cli": "^6.5.4"
   }
