--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tsconfig/node-lts": "^18.12.2",
+    "@tsconfig/strictest": "^2.0.1",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/node": "^18.16.16",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/xml2js": "^0.4.11",
