--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
+    "daisyui": "^4.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "utility-types": "^3.11.0",
     "xml2js": "^0.6.2",
