--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^2.2.5",
     "typescript": "^5.4.2",
     "xml2js": "^0.6.2",
     "zod": "^3.22.4"
@@ -26,14 +27,14 @@
   "devDependencies": {
     "@tsconfig/next": "^2.0.1",
     "@tsconfig/strictest": "^2.0.3",
-    "@types/node": "^20.11.28",
-    "@types/react": "^18.2.66",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.18",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.36",
     "tailwindcss": "^3.4.1"
   }
 }
