--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals", "plugin:tailwindcss/recommended"],
   "rules": {
     "no-console": ["error", { "allow": ["warn", "error"] }]
   }
