--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "clsx": "^2.1.1",
-    "daisyui": "^4.10.5",
+    "daisyui": "^4.11.1",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swr": "^2.2.5",
     "typescript": "^5.4.5",
-    "zod": "^3.23.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tsconfig/next": "^2.0.3",
