--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "swr": "^2.2.5",
     "typescript": "^5.4.5",
+    "xmlbuilder2": "^3.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
