--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,10 +17,9 @@
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.22",
-    "next": "^14.2.20",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "swr": "^2.2.5",
+    "next": "15.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "typescript": "^5.7.2",
     "xmlbuilder2": "^3.1.1",
     "zod": "^3.24.1"
@@ -29,11 +28,11 @@
     "@tsconfig/next": "^2.0.3",
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "^22.10.2",
-    "@types/react": "^18.3.16",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "autoprefixer": "^10.4.20",
     "eslint": "8.57.1",
-    "eslint-config-next": "14.2.20",
+    "eslint-config-next": "15.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
