--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,14 @@
 {
-  "extends": ["@tsconfig/strictest/tsconfig", "@tsconfig/next/tsconfig.json"],
+  "extends": [
+    "@tsconfig/strictest/tsconfig",
+    "@tsconfig/next/tsconfig.json"
+  ],
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,8 +25,16 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "target": "ES2017"
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
